Bug fix #02: Updated Map nameToProvider, now name includes country code

--- a/src/main/resources/project/graphics/demo/error-view.fxml
+++ b/src/main/resources/project/graphics/demo/error-view.fxml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="project.graphics.demo.ErrorView"
-            prefHeight="400.0" prefWidth="600.0">
 
-</AnchorPane>
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="150.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+    <children>
+        <FlowPane prefHeight="150.0" prefWidth="300.0">
+            <children>
+                <AnchorPane fx:id="labelAnchorPane" prefHeight="100.0" prefWidth="300.0" />
+                <AnchorPane prefHeight="50.0" prefWidth="300.0">
+                    <children>
+                        <Button layoutX="115.0" layoutY="13.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Button" />
+                    </children>
+                </AnchorPane>
+            </children>
+        </FlowPane>
+    </children>
+</VBox>
