--- a/src/main/resources/project/graphics/demo/hello-view.fxml
+++ b/src/main/resources/project/graphics/demo/hello-view.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -24,13 +25,15 @@
       </MenuBar>
       <FlowPane prefHeight="720.0" prefWidth="1250.0">
          <children>
-            <AnchorPane fx:id="countriesAnchorPane" maxHeight="700.0" maxWidth="415.0" prefHeight="700.0" prefWidth="415.0" style="-fx-border-color: black;">
+            <AnchorPane maxHeight="700.0" maxWidth="415.0" prefHeight="700.0" prefWidth="415.0" style="-fx-border-color: black;">
                <children>
                   <Label alignment="TOP_CENTER" layoutX="12.0" layoutY="7.0" prefHeight="50.0" prefWidth="393.0" text="Countries" textAlignment="CENTER" AnchorPane.bottomAnchor="664.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="15.0">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
+                  <AnchorPane fx:id="countriesAnchorPane" layoutX="108.0" layoutY="84.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0" />
+                  <CheckBox fx:id="enableAllCountries" layoutX="12.0" layoutY="68.0" mnemonicParsing="false" prefHeight="17.0" prefWidth="149.0" text="Enable all checkboxes" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="68.0" />
                </children>
             </AnchorPane>
             <AnchorPane fx:id="providersAnchorPane" maxHeight="700.0" maxWidth="415.0" prefHeight="700.0" prefWidth="415.0" style="-fx-border-color: black;">
@@ -40,11 +43,12 @@
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <ScrollPane fx:id="scrl" layoutX="108.0" layoutY="55.0" prefHeight="652.0" prefWidth="281.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="75.0">
+                  <ScrollPane fx:id="scrl" layoutX="108.0" layoutY="55.0" prefHeight="652.0" prefWidth="281.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0">
                     <content>
                       <AnchorPane fx:id="providersScrollPAne" />
                     </content>
                   </ScrollPane>
+                  <CheckBox fx:id="selectAllProviders" layoutX="11.0" layoutY="68.0" mnemonicParsing="false" text="Select all" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="68.0" />
                </children>
             </AnchorPane>
             <FlowPane maxHeight="720.0" maxWidth="420.0" prefHeight="720.0" prefWidth="420.0">
