Search Interface creation

--- a/src/main/resources/project/graphics/demo/hello-view.fxml
+++ b/src/main/resources/project/graphics/demo/hello-view.fxml
@@ -72,7 +72,7 @@
                   </AnchorPane>
                   <AnchorPane prefHeight="50.0" prefWidth="420.0" style="-fx-border-color: black;">
                      <children>
-                        <Button layoutX="98.0" layoutY="12.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" text="Button" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="5.0" />
+                        <Button fx:id="searchButton" layoutX="98.0" layoutY="12.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" text="Search" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="5.0" />
                      </children>
                   </AnchorPane>
                </children>
