--- a/src/main/resources/project/graphics/demo/hello-view.fxml
+++ b/src/main/resources/project/graphics/demo/hello-view.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.image.*?>
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
@@ -12,22 +17,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <MenuBar prefHeight="50.0" prefWidth="1250.0">
-         <menus>
-            <Menu mnemonicParsing="false" text="File">
-              <items>
-                <MenuItem mnemonicParsing="false" text="Exit" />
-              </items>
-            </Menu>
-         </menus>
-      </MenuBar>
       <FlowPane prefHeight="720.0" prefWidth="1250.0">
          <children>
-            <AnchorPane maxHeight="700.0" maxWidth="415.0" prefHeight="700.0" prefWidth="415.0" style="-fx-border-color: black;">
+            <AnchorPane maxHeight="751.0" maxWidth="415.0" prefHeight="751.0" prefWidth="415.0" style="-fx-border-color: yellow;">
                <children>
-                  <Label alignment="TOP_CENTER" layoutX="12.0" layoutY="7.0" prefHeight="50.0" prefWidth="393.0" text="Countries" textAlignment="CENTER" AnchorPane.bottomAnchor="664.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="15.0">
+                  <Label alignment="TOP_CENTER" layoutX="12.0" layoutY="7.0" prefHeight="50.0" prefWidth="393.0" text="Countries" textAlignment="CENTER" textFill="#004494" AnchorPane.bottomAnchor="664.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="15.0">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
@@ -35,9 +31,9 @@
                   <AnchorPane fx:id="countriesAnchorPane" layoutX="108.0" layoutY="84.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0" />
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="providersAnchorPane" maxHeight="700.0" maxWidth="415.0" prefHeight="700.0" prefWidth="415.0" style="-fx-border-color: black;">
+            <AnchorPane fx:id="providersAnchorPane" maxHeight="751.0" maxWidth="415.0" prefHeight="751.0" prefWidth="415.0" style="-fx-border-color: yellow;">
                <children>
-                  <Label alignment="TOP_CENTER" layoutX="11.0" layoutY="14.0" prefHeight="50.0" prefWidth="393.0" text="Providers" textAlignment="CENTER" AnchorPane.bottomAnchor="664.0" AnchorPane.topAnchor="15.0">
+                  <Label alignment="TOP_CENTER" layoutX="11.0" layoutY="14.0" prefHeight="50.0" prefWidth="393.0" text="Providers" textAlignment="CENTER" textFill="#004494" AnchorPane.bottomAnchor="664.0" AnchorPane.topAnchor="15.0">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
@@ -52,27 +48,27 @@
             </AnchorPane>
             <FlowPane maxHeight="720.0" maxWidth="420.0" prefHeight="720.0" prefWidth="420.0">
                <children>
-                  <AnchorPane fx:id="tosAnchorPane" prefHeight="335.0" prefWidth="420.0" style="-fx-border-color: black;">
+                  <AnchorPane fx:id="tosAnchorPane" prefHeight="366.0" prefWidth="420.0" style="-fx-border-color: yellow;">
                      <children>
-                        <Label alignment="TOP_CENTER" layoutX="13.0" layoutY="17.0" prefHeight="38.0" prefWidth="396.0" text="Types Of Service" textAlignment="CENTER" AnchorPane.bottomAnchor="281.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="16.0">
+                        <Label alignment="TOP_CENTER" layoutX="13.0" layoutY="17.0" prefHeight="38.0" prefWidth="396.0" text="Types Of Service" textAlignment="CENTER" textFill="#004494" AnchorPane.bottomAnchor="281.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="16.0">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
                      </children>
                   </AnchorPane>
-                  <AnchorPane fx:id="ssAnchorPane" prefHeight="335.0" prefWidth="420.0" style="-fx-border-color: black;">
+                  <AnchorPane fx:id="ssAnchorPane" prefHeight="335.0" prefWidth="420.0" style="-fx-border-color: yellow;">
                      <children>
-                        <Label alignment="TOP_CENTER" layoutX="12.0" layoutY="14.0" prefHeight="38.0" prefWidth="396.0" text="Service Statuses" textAlignment="CENTER" AnchorPane.topAnchor="16.0">
+                        <Label alignment="TOP_CENTER" layoutX="12.0" layoutY="14.0" prefHeight="38.0" prefWidth="396.0" text="Service Statuses" textAlignment="CENTER" textFill="#004494" AnchorPane.topAnchor="16.0">
                            <font>
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
                      </children>
                   </AnchorPane>
-                  <AnchorPane prefHeight="50.0" prefWidth="420.0" style="-fx-border-color: black;">
+                  <AnchorPane prefHeight="50.0" prefWidth="420.0" style="-fx-border-color: yellow;">
                      <children>
-                        <Button fx:id="searchButton" layoutX="98.0" layoutY="12.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" text="Search" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="5.0" />
+                        <Button fx:id="searchButton" layoutX="98.0" layoutY="12.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" style="-fx-background-color: blue;" text="Search" textFill="WHITE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="5.0" />
                      </children>
                   </AnchorPane>
                </children>
