--- a/src/main/resources/project/graphics/demo/hello-view.fxml
+++ b/src/main/resources/project/graphics/demo/hello-view.fxml
@@ -21,17 +21,20 @@
    <children>
       <FlowPane prefHeight="720.0" prefWidth="1250.0">
          <children>
-            <AnchorPane maxHeight="751.0" maxWidth="415.0" prefHeight="751.0" prefWidth="415.0" style="-fx-border-color: gold;">
+            <AnchorPane maxHeight="751.0" maxWidth="415.0" prefHeight="751.0" prefWidth="415.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
                <children>
-                  <Label alignment="TOP_CENTER" layoutX="12.0" layoutY="7.0" prefHeight="50.0" prefWidth="393.0" text="Countries" textAlignment="CENTER" textFill="#004494" AnchorPane.bottomAnchor="664.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="15.0">
+                  <Label fx:id="countriesAncorPane" alignment="TOP_CENTER" layoutX="12.0" layoutY="7.0" prefHeight="50.0" prefWidth="393.0" text="Countries" textAlignment="CENTER" textFill="#004494" AnchorPane.bottomAnchor="664.0" AnchorPane.leftAnchor="11.0" AnchorPane.rightAnchor="11.0" AnchorPane.topAnchor="15.0">
                      <font>
                         <Font name="System Bold" size="24.0" />
                      </font>
                   </Label>
-                  <AnchorPane fx:id="countriesAnchorPane" layoutX="108.0" layoutY="84.0" prefHeight="200.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0" />
+                  <AnchorPane fx:id="countriesAnchorPane" layoutX="108.0" layoutY="84.0" prefHeight="200.0" prefWidth="200.0" stylesheets="@css/stylesheet.css" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="90.0">
+                     <children>
+                        <ToggleButton fx:id="darkMode" layoutX="14.0" layoutY="601.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="44.0" styleClass="dark-mode-toggle" stylesheets="@css/stylesheet.css" />
+                     </children></AnchorPane>
                </children>
             </AnchorPane>
-            <AnchorPane fx:id="providersAnchorPane" maxHeight="751.0" maxWidth="415.0" prefHeight="751.0" prefWidth="415.0" style="-fx-border-color: gold;">
+            <AnchorPane fx:id="providersAnchorPane" maxHeight="751.0" maxWidth="415.0" prefHeight="751.0" prefWidth="415.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
                <children>
                   <Label alignment="TOP_CENTER" layoutX="11.0" layoutY="14.0" prefHeight="50.0" prefWidth="393.0" text="Providers" textAlignment="CENTER" textFill="#004494" AnchorPane.bottomAnchor="664.0" AnchorPane.topAnchor="15.0">
                      <font>
@@ -43,12 +46,12 @@
                       <AnchorPane fx:id="providersScrollPAne" />
                     </content>
                   </ScrollPane>
-                  <CheckBox fx:id="selectAllProviders" layoutX="11.0" layoutY="68.0" mnemonicParsing="false" text="Select all" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="68.0" />
+                  <CheckBox fx:id="selectAllProviders" layoutX="11.0" layoutY="68.0" mnemonicParsing="false" stylesheets="@css/stylesheet.css" text="Select all" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="68.0" />
                </children>
             </AnchorPane>
             <FlowPane maxHeight="720.0" maxWidth="420.0" prefHeight="720.0" prefWidth="420.0">
                <children>
-                  <AnchorPane fx:id="tosAnchorPane" prefHeight="366.0" prefWidth="420.0" style="-fx-border-color: gold;">
+                  <AnchorPane fx:id="tosAnchorPane" prefHeight="366.0" prefWidth="420.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
                      <children>
                         <Label alignment="TOP_CENTER" layoutX="13.0" layoutY="17.0" prefHeight="38.0" prefWidth="396.0" text="Types Of Service" textAlignment="CENTER" textFill="#004494" AnchorPane.bottomAnchor="281.0" AnchorPane.leftAnchor="12.0" AnchorPane.rightAnchor="12.0" AnchorPane.topAnchor="16.0">
                            <font>
@@ -57,7 +60,7 @@
                         </Label>
                      </children>
                   </AnchorPane>
-                  <AnchorPane fx:id="ssAnchorPane" prefHeight="335.0" prefWidth="420.0" style="-fx-border-color: gold;">
+                  <AnchorPane fx:id="ssAnchorPane" prefHeight="335.0" prefWidth="420.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
                      <children>
                         <Label alignment="TOP_CENTER" layoutX="12.0" layoutY="14.0" prefHeight="38.0" prefWidth="396.0" text="Service Statuses" textAlignment="CENTER" textFill="#004494" AnchorPane.topAnchor="16.0">
                            <font>
@@ -66,7 +69,7 @@
                         </Label>
                      </children>
                   </AnchorPane>
-                  <AnchorPane prefHeight="50.0" prefWidth="420.0" style="-fx-border-color: gold;">
+                  <AnchorPane prefHeight="50.0" prefWidth="420.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
                      <children>
                         <Button fx:id="searchButton" layoutX="98.0" layoutY="12.0" mnemonicParsing="false" prefHeight="50.0" prefWidth="225.0" styleClass="searchButton" stylesheets="@css/stylesheet.css" text="Search" textFill="WHITE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="75.0" AnchorPane.rightAnchor="75.0" AnchorPane.topAnchor="5.0" />
                      </children>
