Added Service Info Pane on Result UI

--- a/src/main/resources/project/graphics/demo/hello-view.fxml
+++ b/src/main/resources/project/graphics/demo/hello-view.fxml
@@ -1,23 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.image.*?>
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <FlowPane prefHeight="720.0" prefWidth="1250.0">
          <children>
@@ -32,6 +25,7 @@
                      <children>
                         <ToggleButton fx:id="darkMode" layoutX="14.0" layoutY="601.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="44.0" styleClass="dark-mode-toggle" stylesheets="@css/stylesheet.css" />
                      </children></AnchorPane>
+                  <CheckBox layoutX="12.0" layoutY="69.0" mnemonicParsing="false" text="Select all" AnchorPane.bottomAnchor="666.0" AnchorPane.leftAnchor="12.0" />
                </children>
             </AnchorPane>
             <AnchorPane fx:id="providersAnchorPane" maxHeight="751.0" maxWidth="415.0" prefHeight="751.0" prefWidth="415.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
@@ -46,7 +40,7 @@
                       <AnchorPane fx:id="providersScrollPAne" />
                     </content>
                   </ScrollPane>
-                  <CheckBox fx:id="selectAllProviders" layoutX="11.0" layoutY="68.0" mnemonicParsing="false" stylesheets="@css/stylesheet.css" text="Select all" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="68.0" />
+                  <CheckBox fx:id="selectAllProviders" layoutX="11.0" layoutY="68.0" mnemonicParsing="false" stylesheets="@css/stylesheet.css" text="Select all" AnchorPane.bottomAnchor="666.0" AnchorPane.leftAnchor="12.0" AnchorPane.topAnchor="68.0" />
                </children>
             </AnchorPane>
             <FlowPane maxHeight="720.0" maxWidth="420.0" prefHeight="720.0" prefWidth="420.0">
@@ -58,6 +52,7 @@
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
+                        <CheckBox layoutX="13.0" layoutY="67.0" mnemonicParsing="false" text="Select all" AnchorPane.bottomAnchor="282.0" AnchorPane.leftAnchor="12.0" />
                      </children>
                   </AnchorPane>
                   <AnchorPane fx:id="ssAnchorPane" prefHeight="335.0" prefWidth="420.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
@@ -67,6 +62,7 @@
                               <Font name="System Bold" size="24.0" />
                            </font>
                         </Label>
+                        <CheckBox layoutX="14.0" layoutY="55.0" mnemonicParsing="false" text="Select all" />
                      </children>
                   </AnchorPane>
                   <AnchorPane prefHeight="50.0" prefWidth="420.0" style="-fx-border-color: gold;" stylesheets="@css/stylesheet.css">
