Added Service Info Pane on Result UI

--- a/src/main/resources/project/graphics/demo/css/stylesheet.css
+++ b/src/main/resources/project/graphics/demo/css/stylesheet.css
@@ -35,10 +35,10 @@
     -fx-font-size: 14px;
 }
 
-.country-titled-pane {
+.country-titled-pane > *.content {
     -fx-background-color: #cccccc;
 }
 
-.provider-titled-pane {
+.provider-titled-pane > *.content {
     -fx-background-color: #eeeeee;
 }
