--- a/src/main/resources/project/graphics/demo/loading-view.fxml
+++ b/src/main/resources/project/graphics/demo/loading-view.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
-
+<?import javafx.scene.text.Text?>
 
 <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
    <children>
@@ -15,7 +15,7 @@
          <children>
             <ImageView fitHeight="144.0" fitWidth="218.0" layoutX="511.0" layoutY="231.0" rotate="180.0">
                <image>
-                  <Image url="@../../../../../../../../OneDrive/Desktop/European_flag,_upside_down.svg.png" />
+                  <Image url="@images/euf.png" />
                </image>
             </ImageView>
             <Label layoutX="58.0" layoutY="80.0" style="-fx-font-weight: bold;" text="EU Trust Services Desktop Dashboard" textFill="#004494">
@@ -23,12 +23,13 @@
                   <Font size="64.0" />
                </font>
             </Label>
-            <ProgressBar layoutX="447.0" layoutY="462.0" prefHeight="24.0" prefWidth="346.0" progress="0.0" />
+            <ProgressBar fx:id="progressBar" layoutX="447.0" layoutY="462.0" prefHeight="24.0" prefWidth="346.0" progress="0.0" />
             <Label layoutX="1114.0" layoutY="706.0" style="-fx-font-weight: bold;" text="Version 1.0.0" textFill="#979797">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
+            <Text fx:id="loadingText" layoutX="538.0" layoutY="511.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Gathering Trust Services Data..." textAlignment="CENTER" />
          </children>
       </AnchorPane>
    </children>
