--- a/src/main/resources/project/graphics/demo/result-view.fxml
+++ b/src/main/resources/project/graphics/demo/result-view.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
@@ -9,7 +13,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="750.0" prefWidth="1250.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <FlowPane prefHeight="799.0" prefWidth="1250.0">
          <children>
@@ -34,8 +38,8 @@
             </HBox>
             <AnchorPane prefHeight="50.0" prefWidth="1250.0">
                <children>
-                  <Button fx:id="anotherSearchButton" layoutX="1184.0" layoutY="13.0" mnemonicParsing="false" text="Perform another search" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="905.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="5.0" />
-                  <Button fx:id="backButton" layoutX="14.0" layoutY="7.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="234.0" text="Go back" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="5.0" />
+                  <Button fx:id="anotherSearchButton" layoutX="1184.0" layoutY="13.0" mnemonicParsing="false" style="-fx-background-color: #004494;" text="Perform another search" textFill="WHITE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="905.0" AnchorPane.rightAnchor="50.0" AnchorPane.topAnchor="5.0" />
+                  <Button fx:id="backButton" layoutX="14.0" layoutY="7.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="234.0" style="-fx-background-color: #004494;" text="Go back" textFill="WHITE" AnchorPane.bottomAnchor="5.0" AnchorPane.leftAnchor="50.0" AnchorPane.topAnchor="5.0" />
                </children>
             </AnchorPane>
          </children>
